api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: basic3tier-api
  template:
    metadata:
      labels:
        app: basic3tier-api
    spec:
      containers:
      - name: api-container
        image: najjaved/basic3tier-api:latest
        ports:
        - containerPort: 80
