postgres-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-container
        image: postgres:15 # use the official postgres:15 image from Docker Hub
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data  # Mount the entire volume here
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-3tier-pvc
