ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basic3tier-ui
  template:
    metadata:
      labels:
        app: basic3tier-ui
    spec:
      containers:
      - name: ui-container
        image: najjaved/basic3tier-ui:latest
        ports:
        - containerPort: 80
        # Optional environment variable if using dynamic config
