api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: basic3tier-api
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
