ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: basic3tier-ui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
